// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyPage component renders actions with descriptions 1`] = `
<EmptyPrompt
  actions={
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        grow={false}
        style={
          Object {
            "maxWidth": 283,
          }
        }
      >
        <EuiCard
          description="My Description"
          footer={
            <EuiButton
              data-test-subj="empty-page-actions-action"
              fill={true}
              href="my/url/from/nowwhere"
            >
              Do Something
            </EuiButton>
          }
          title={false}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  }
  iconType="logoSecurity"
  title={
    <h2>
      My Super Title
    </h2>
  }
/>
`;

exports[`EmptyPage component renders actions without descriptions 1`] = `
<EmptyPrompt
  actions={
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        grow={false}
        style={
          Object {
            "maxWidth": 283,
          }
        }
      >
        <EuiButton
          data-test-subj="empty-page-actions-action"
          href="my/url/from/nowwhere"
        >
          Do Something
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  }
  iconType="logoSecurity"
  title={
    <h2>
      My Super Title
    </h2>
  }
/>
`;
